WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.4.0-dev, 2012-12-19


Version 0.4.0 (under dev!)
--------------------------

* core: fix default mouse buttons actions for script buffer (focus the window
  before executing action)
* core: add git version in build, display it in "weechat-curses --help" and
  /version
* core: fix scroll of one page down when weechat.look.scroll_page_percent is
  less than 100 (bug #37875)
* core: disable paste detection and confirmation if bar item "input_paste" is
  not used in a visible bar (task #12327)
* core: use high priority (50000) for commands /command and /input so that an
  alias will not take precedence over these commands (bug #36353)
* core: execute command with higher priority when many commands with same name
  are found with different priorities
* core: add color support in options
  weechat.look.prefix_{action|error|join|network|quit} (task #9555)
* core: fix display of combining chars (bug #37775)
* core: display default values for changed config options in output of /set
* core: stop cmake if gcrypt lib is not found (bug #37671)
* core: add incomplete mouse events "event-down" and "event-drag" (task #11840)
* core: add command /eval, use expression in conditions for bars
* core: add option "-quit" for command /upgrade (save session and quit without
  restarting WeeChat, for delayed restoration)
* core: fix display of zoomed/merged buffer (with number >= 2) after switching
  to it (bug #37593)
* core: fix display problem when option weechat.look.prefix_same_nick is set
  (problem with nick displayed in first line of screen) (bug #37556)
* core: fix wrapping of words with wide chars (the break was made before the
  correct position)
* api: allow creation of structure with hdata_update (allowed for hdata
  "history")
* api: use hashtable "options" for command arguments in function
  hook_process_hashtable (optional, default is a split of string with command)