@@ -7,6 +7,7 @@ v0.4.0-dev, 2012-12-19
 Version 0.4.0 (under dev!)
 --------------------------
 
+* core: fix stuck mouse (bug #36533)
 * core: fix default mouse buttons actions for script buffer (focus the window
   before executing action)
 * core: add git version in build, display it in "weechat-curses --help" and
